// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datetime Component does not render when start time is empty 1`] = `
<div>
  


</div>
`;

exports[`Datetime Component renders with custom attributes and classes 1`] = `
<div>
  

  
  <span
    class="ct-datetime custom-class"
    data-test="true"
  >
    
    
    <time
      class="ct-timestamp__start"
      datetime="2023-06-15T08:00:00Z"
    >
      2023-06-15T08:00
    </time>
    
      
  </span>
  

</div>
`;

exports[`Datetime Component renders with start and end time 1`] = `
<div>
  

  
  <span
    class="ct-datetime "
  >
    
    
    <time
      class="ct-timestamp__start"
      datetime="2023-06-15T08:00:00Z"
    >
      2023-06-15T08:00
    </time>
    
          —
      
    <time
      class="ct-timestamp__end"
      datetime="2023-06-15T17:00:00Z"
    >
      2023-06-15T17:00
    </time>
    
      
  </span>
  

</div>
`;

exports[`Datetime Component renders with start time only 1`] = `
<div>
  

  
  <span
    class="ct-datetime "
  >
    
    
    <time
      class="ct-timestamp__start"
      datetime="2023-06-15T08:00:00Z"
    >
      2023-06-15T08:00
    </time>
    
      
  </span>
  

</div>
`;

exports[`Datetime Component strips HTML tags from attribute values 1`] = `
<div>
  

  
  <span
    class="ct-datetime "
  >
    
    
    <time
      class="ct-timestamp__start"
      datetime="2023-06-15T08:00:00Z"
    >
      <b>
        2023-06-15T08:00
      </b>
    </time>
    
          —
      
    <time
      class="ct-timestamp__end"
      datetime="2023-06-15T17:00:00Z"
    >
      <b>
        2023-06-15T17:00
      </b>
    </time>
    
      
  </span>
  

</div>
`;
